# dataset_ch-lae_flux_product

./: .buildinfo  .gitignore  README.md  _pyproject.toml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/notebooks/: README.md  _create_readme.ipynb
_sources/notebooks/00_L0_checks/: 01.1_L0_merge_IRGA72_output_to_parquet.ipynb  02.2_L0_check_fluxes_IRGA72_2016-2024.ipynb
_sources/notebooks/10_METEO/: 12.0_DownloadMeteo6_2005-2024.ipynb  12.4_CalcVPD_2004-2024.ipynb  12.6_FormatMeteoForEddyProFluxProcessing.ipynb
dataset_ch-lae_flux_product/: FPC.md  L0.md  _config.yml  _toc.yml
dataset_ch-lae_flux_product/notebooks/: README.md
dataset_ch-lae_flux_product/notebooks/00_L0_checks/: 01.1_L0_merge_IRGA72_output_to_parquet.ipynb  01.1_L0_merge_output_to_parquet.ipynb  (+7 more)
notebooks/: README.html  _create_readme.html
notebooks/00_L0_checks/: 01.1_L0_merge_IRGA72_output_to_parquet.html  02.1_L0_check_winddir_IRGA72_2016-2024.html  02.2_L0_check_fluxes_IRGA72_2016-2024.html  03.1_L0_mergeFluxesMeteo_IRGA72_2016-2024.html  09.1_L0_FluxProcessingChain_L3.3_NEE_QCF10.html  09.2_L0_FluxProcessingChain_L3.3_NEE_QCF10_lessHampel.html
notebooks/10_METEO/: 12.0_DownloadMeteo6_2005-2024.html  12.2_GapFillingMeteo6_2005-2024.html  12.4_CalcVPD_2004-2024.html  12.6_FormatMeteoForEddyProFluxProcessing.html  X-14.0_DownloadMeteo6_2021-2024_DB-PROCESSED_meteoscreening_diive.html
notebooks/90_DATASET_OVERVIEW/: METEO_SW_IN.html  METEO_TA.html  METEO_VPD.html
(+37 files in other folders)
