[project]
name = "dataset-ch-lae-flux-product"
version = "0.1.0"
description = "Dataset for mixed forest CH-LAE"
authors = [
    {name = "Lukas Hörtnagl",email = "lukas.hoertnagl@usys.ethz.ch"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
diive = { path = "../../21 - DIIVE/diive", develop = true }
dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
ghp-import = "^2.1.0"
jupyter-book = "^1.0.4.post1"
sphinxcontrib-mermaid = "^1.0.0"